# LWTR4SC

./: CMakeLists.txt  FTR_EVENTS.md
example/: CMakeLists.txt  ftr_example.cpp
src/: CMakeLists.txt
src/lwtr/: lwtr.h
